# my-app

./: .env  Dockerfile.mother  Dockerfile.sandbox  Gg.py  M.py  Zss.py  app.py  asli.py  asli_pro.py  assistant_logic.js  bot.py  build.py  cluster.js  database.js  deepseek_python_20260528_1da84b.py  deepseek_python_20260528_4f97d2.py  deepseek_python_20260528_a9a478.py  deepseek_python_20260529_eea271.py  deepseek_python_20260614_80b40f.py  deepseek_python_20260709_dee7bb.py  docker-compose.yml  index.html  init.sql  m.py  m1.py  m2.py  m3.py  m4.py  main.py  mother_bot_ultimate.py  motherbot.py  package.json  pyproject.toml  requirements.txt  script.js  secure_web_app.py  server.js  setup.py  ultimate_web_app.py  web_app.py  (+2 more)
.github/workflows/: build-android.yml  build.yml
core/: config.py  database.py  docker_manager.py  logging_config.py  redis_client.py  security.py
frontend/: index.html
handlers/: admin_handlers.py  bot_handlers.py  payment_handlers.py  user_handlers.py
menus/: main_menu.py
texts/: __init__.py  en.json  fa.json
www/: index.html
